completed the headline component for now

--- a/src/app/home/headline/headline.component.html
+++ b/src/app/home/headline/headline.component.html
@@ -1,1 +1,10 @@
-<p>headline works!</p>
+<div id="showcase">
+    <div class="container">
+        <div class="showcase-content">
+            <h1><span class="text-primary">Stay</span>...Forever</h1>
+            <h2>Or A <span class="text-primary">Night</span></h2>
+            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, necessitatibus nemo eius rem optio ullam fuga? Officia quaerat magnam vitae.</p>
+            <a class="btn" >About Our Hotel</a>
+        </div>
+    </div>
+</div>
