--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,11 @@ html,body {
     margin: 10px 0;
   }
 
+  /* Util Classes */
+
+  .text-primary {
+    color:#f7c08a;
+  }
   .container {
     margin: auto;
     max-width: 1100px;
@@ -60,3 +65,4 @@ html,body {
   .clr {
     clear: both;
   }
+
