--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -1,1 +1,14 @@
-<p>info works!</p>
+<section id="home-info" class="bg-dark">
+    <div class="info-img"></div>
+    <div class="info-content">
+      <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+      <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+          aliquam dolor alias iste autem, quaerat magni unde accusantium qui
+          fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis,
+          explicabo quisquam dolor placeat praesentium nesciunt mollitia quos
+          nobis natus voluptatum asperiores!
+      </p>
+      <a href="#" class="btn btn-light">Read More</a>
+    </div>
+  </section>
