updated site for home page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="clr"></div>
+
+<footer id="main-footer">
+  <p>Hotel SJ &copy; 2019, All RIghts Reserved</p>
+</footer>
