--- a/src/app/home/amenities/amenities.component.html
+++ b/src/app/home/amenities/amenities.component.html
@@ -1,1 +1,17 @@
-<p>amenities works!</p>
+<section id="features">
+    <div class="box bg-light">
+        <fa name="fas fa-hotel" size=2x></fa>
+      <h3>Great Location</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+    </div>
+    <div class="box bg-primary">
+        <fa name="plane" size=2x></fa>
+        <h3>Airport Central</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+    </div>
+    <div class="box bg-light">
+        <fa name="cog" size=2x animation="spin"></fa>
+        <h3>Business Rooms</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+    </div>
+  </section>
