--- a/src/styles.css
+++ b/src/styles.css
@@ -66,3 +66,10 @@ html,body {
     clear: both;
   }
 
+  /* Footer */
+#main-footer {
+  text-align: center;
+  background: #444;
+  color: #fff;
+  padding: 20px;
+}
