--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,6 +4,7 @@
             <h1 class="logo"><a [routerLink]="['/home']">HSJ</a> </h1>
             <ul>
                 <li><a [routerLink]="['/home']">Home</a></li>
+                <li><a [routerLink]="['/about']">About</a></li>
             </ul>
         </div>
     </nav>
