updated the trips

--- a/src/app/home/headline/headline.component.html
+++ b/src/app/home/headline/headline.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="showcase-content">
             <h1><span class="text-primary">Stay</span>...Forever</h1>
-            <h2>Or A <span class="text-primary">Night</span></h2>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, necessitatibus nemo eius rem optio ullam fuga? Officia quaerat magnam vitae.</p>
+            <h2>Or A Night</h2>
+            <p class="lead">As the top hotel in Tennessee and the most cherished, we look forward to being your home-away-from-home in Nashville. Like the locals have said for more than a century, "meet me at The HSJ."</p>
             <a class="btn" >About Our Hotel</a>
         </div>
     </div>
