--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,6 +5,7 @@
             <ul>
                 <li><a [routerLink]="['/home']">Home</a></li>
                 <li><a [routerLink]="['/about']">About</a></li>
+                <li><a [routerLink]="['/trips']">Trips</a></li>
             </ul>
         </div>
     </nav>
