updates to the hsj site

--- a/src/app/about/about-headline/about-headline.component.html
+++ b/src/app/about/about-headline/about-headline.component.html
@@ -2,8 +2,8 @@
     <div class="container">
       <div class="info-left">
         <h1 class="l-heading"><span class="text-primary">About</span> Hotel BT</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem veritatis illo, similique labore voluptate nulla animi dolorum eius laborum illum, nesciunt quod reprehenderit dicta autem vel nobis minima sit deleniti!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
+        <p>Take a tour of the Nashville's rich history by visiting sites like Bicentennial Capitol Mall State Park, Belmont Mansion, and the Cheekwood Botanical Garden and Museum.</p>
+        <p>Find out why the city is known as "Music City"with a show at the Grand Ole Opry or Ryman Auditorium; or just walk around and see what you can find. Great restaurants and shops, a replica of a famous Greek temple, live entertainment, and so much more await you in this memorable destination, and The Hermitage Hotel is the perfect starting point for your adventure.</p>
       </div>
       <div class="info-right">
         <img src="../../../assets/imgs/about.jpg" alt="hotel">
