--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -3,12 +3,9 @@
     <div class="info-content">
       <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
       <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
-          aliquam dolor alias iste autem, quaerat magni unde accusantium qui
-          fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis,
-          explicabo quisquam dolor placeat praesentium nesciunt mollitia quos
-          nobis natus voluptatum asperiores!
+        “Meet me at The HSJ” may have been one of Nashville’s most popular phrases during the 20th Century. 
+        When spoken or heard today, those words evoke a timeless sense of quality and excitement, a touch of glamor and class, 
+        and the assurance of a memorable experience amongst friends. 
       </p>
-      <a href="#" class="btn btn-light">Read More</a>
     </div>
   </section>
