--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -31,6 +31,7 @@
   
   #navbar ul li a:hover, 
   #navbar ul li a.current {
-    background: #444;
-    color: #f7c08a;
+    background: #337ab7;
+    color: #fff;
+    text-decoration: none;
   }
