--- a/src/app/trips/trip-list/trip-list.component.html
+++ b/src/app/trips/trip-list/trip-list.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Adventures for your Stay</h1>
+    <h1 class="l-heading">Adventures for your Stay</h1>
     <hr>
     <div class="row">
         <div *ngFor="let trip of trips" class="col-md-5">
