--- a/src/app/trips/trip-thumbnail/trip-thumbnail.component.css
+++ b/src/app/trips/trip-thumbnail/trip-thumbnail.component.css
@@ -1,5 +1,5 @@
 .well.hoverwell.thumbnail {
-    background-color: #000000;
+    background-color:#337ab7;
     color:white;
     cursor: pointer;
 }
